@@ -290,6 +290,10 @@ package DXM;
 				wcy2 => 'Duplicate WCY',
                 wcys => 'WCY enabled for $_[0]',
 				wcyu => 'WCY disabled for $_[0]',
+				wpc16s => 'Allow PC16 from $_[0] enabled',
+				wpc16u => 'Allow PC16 from $_[0] disabled',
+				wpc19s => 'Route PC19 for $_[0] enabled',
+				wpc19u => 'Route PC19 for $_[0] disabled',
 				wwv1 => '$_[0] is missing or out of range',
 				wwv2 => 'Duplicate WWV',
 				wwvs => 'WWV enabled for $_[0]',
